--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-02-27  Hannes Domani  <ssbssa@yahoo.de>
+
+	* testsuite/poke.libpoke/Makefile.am (COMMON_LDADD): Put
+	libpoke.la before libgnu.la.
+
 2024-02-27  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/poke.c (initialize_user): Only use xdg_config_home if it is
