pickles: Add new pickle for jpeg
2024-03-15  Andreas Klinger  <ak@it-klinger.de>

        * pickles/jpeg.pk: New pickle for jpeg files.
        * pickles/Makefile.am (dist_pickles_DATA): Add jpeg.pk.
        * testsuite/poke.pickles/jpeg-test.pk: New test.
        * testsuite/Makefile.am (EXTRA_DIST): Add jpeg-test.pk.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2024-03-15  Andreas Klinger  <ak@it-klinger.de>
+
+	* pickles/jpeg.pk: New pickle for jpeg files.
+	* pickles/Makefile.am (dist_pickles_DATA): Add jpeg.pk.
+	* testsuite/poke.pickles/jpeg-test.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add jpeg-test.pk.
+
 2024-03-15  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* pickles/jojodiff.pk (Jojo_Length2): Add initializer to
