--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-04-01  Sergio Durigan Junior  <sergiodj@sergiodj.net>
+
+	* pokefmt/pokefmt.l (poke_stmt): Fix typo.
+	(poke_expr): Likewise.
+
 2024-03-31  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_type_append_to): Include itype in
