--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2024-03-31  Jose E. Marchesi  <jemarch@gnu.org>
+2024-04-02  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* doc/poke.texi (Poke Scripts): Document poke_interactive_p.
+
+2024-003-31  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_type_append_to): Include itype in
 	integral struct type string representations.
