--- a/HACKING
+++ b/HACKING
@@ -77,12 +77,13 @@ _________________
 ..... 2. try_stmt
 ..... 3. exp
 ..... 4. cond_exp
-.. 4. Compiler Passes and Phases
+.. 4. Lexical Handling
+.. 5. Compiler Passes and Phases
 ..... 1. Naming Conventions for Phases
 ..... 2. Naming Conventions for Handlers
 ..... 3. Front and Middle End Handlers should be Re-entrant
-.. 5. Adding Compiler Built-Ins
-.. 6. Writing Compiler Diagnostics
+.. 6. Adding Compiler Built-Ins
+.. 7. Writing Compiler Diagnostics
 12. The Poke Virtual Machine
 .. 1. PVM types
 ..... 1. How `any' is handed in the PVM
@@ -1485,7 +1486,40 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   `----
 
 
-11.4 Compiler Passes and Phases
+11.4 Lexical Handling
+~~~~~~~~~~~~~~~~~~~~~
+
+  The parser needs to build the lexical enviroment as it works through
+  the source code.  This is because it needs to find the declarations of
+  all the entities referenced by variable names.  Also, the Poke syntax
+  requires to determine whether a given identifier is a type name or
+  not.  It uses a `pkl-env' for this, and it pushes and pops frames
+  according to the language rules.  The parser annotates each variable
+  reference with the declaration of the entity being referred, but does
+  not set the variable's lexical address.  This is because this address
+  may not be final, as we shall see below.  Once the parsing is done
+  successfully the lexical environment should consist on just the
+  top-level definitions, which is kept for the rest of the compilation.
+  But the inner frames are no longer available.
+
+  After the parser, the front-end compiler passes are run.  This
+  includes analysis and checking of language rules, transformation, type
+  analysis, constant folding, etc.  These passes can do arbitrary
+  transformations of the tree, and some of these transformations can
+  alter the lexical structure of the program.  The only exception is the
+  top-level environment.  Therefore, these passes shall not rely on the
+  lexical structure.
+
+  Finally, just before the code generator, a lexical pass is run.  This
+  pass contains a `transl' phase.  At this point no further
+  transformations of the AST will be performed and it is final.  The
+  `transl' phase reconstructs the lexical environment (the top-level
+  environment is preserved) and assigns the lexical addresses (back,
+  over) to all variable references.  It also performs a few language
+  rules checks that rely on the relative lexical position of entities.
+
+
+11.5 Compiler Passes and Phases
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
   These are the phases currently implemented in the poke compiler:
@@ -1520,7 +1554,7 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
         gen
 
 
-11.4.1 Naming Conventions for Phases
+11.5.1 Naming Conventions for Phases
 ------------------------------------
 
   We use the following convention to name phases:
@@ -1566,7 +1600,7 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   `libpoke/pkl-NAME.[ch]'.
 
 
-11.4.2 Naming Conventions for Handlers
+11.5.2 Naming Conventions for Handlers
 --------------------------------------
 
   We use the following convention to name phase handlers:
@@ -1594,7 +1628,7 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   the AST nodes with code `PKL_AST_COMP_STMT'.
 
 
-11.4.3 Front and Middle End Handlers should be Re-entrant
+11.5.3 Front and Middle End Handlers should be Re-entrant
 ---------------------------------------------------------
 
   When a type is referenced by name, for example in a map:
@@ -1616,7 +1650,7 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   executed more than once, they should do The Right Thing (TM).
 
 
-11.5 Adding Compiler Built-Ins
+11.6 Adding Compiler Built-Ins
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
   [NOTE: now that inline asm statements are supported, built-ins are
@@ -1676,7 +1710,7 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   `----
 
 
-11.6 Writing Compiler Diagnostics
+11.7 Writing Compiler Diagnostics
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
   Please follow the following guidelines when adding new errors or
