--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-04-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-diag.c (pkl_detailed_location): Handle the failure
+	of `fseeko'.
+
 2024-04-02  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi (Poke Scripts): Document poke_interactive_p.
